# brawtool

./: CMakeLists.txt  README.md  brawtool.cpp
modules/: FindBlackmagicRaw.cmake
resources/: brawtool.json
scripts/: clang-format.sh
